# swarm_deploy

./: .gitignore  .gitmodules  README.md  cam0123-camchain-imucam.yaml
calib/drone_0/: cali  cam0_fisheye.yaml  cam1_fisheye.yaml  cam2_fisheye.yaml  cam3_fisheye.yaml  drone0_cam0123_10hz_1+cam01_5hz_imu_0=result.yaml  f4_v2_virtural_stereo.yaml  virtual_stereo_seek_v2.yaml
config/plotjuggler/: drone_control.xml
config/rviz/: drone_control.rviz
docker/docker_diff_vio/df_visual_frontend/: package.xml
docker/docker_diff_vio/df_visual_frontend/cmake/: df_visual_frontendConfig.cmake
docker/docker_diff_vio/df_visual_frontend/launch/: df_visual_frontend_euroc.launch  df_visual_frontend_uav.launch  rviz.launch
docker/docker_diff_vio/fusion_odometry/: package.xml
docker/docker_diff_vio/fusion_odometry/cmake/: fusion_odometryConfig.cmake
docker/docker_diff_vio/fusion_odometry/config/: Dockerfile  c5_250001_down265_mid360.yaml  c5_250001_front430_mid360.yaml  euroc.yaml  fgi.yaml  lio.rviz  livox.yaml  p100_front430.yaml  plot_config.xml  plot_config_sim.xml  rviz.rviz  rviz_lvio.launch  seeker_v1.yaml  seeker_v2.yaml  virtual_stereo_seek_v1.yaml  virtual_stereo_seek_v2.yaml
docker/docker_diff_vio/fusion_odometry/evaluate/: benchmark.sh  evaluate_on_benchmark.py  run_on_dataset.py
docker/docker_diff_vio/fusion_odometry/launch/: lio_livox.launch  lvio_pinhole_stereo_c5_250001_down265_mid360.launch  lvio_pinhole_stereo_c5_250001_front430_mid360.launch  vio_fisheye_stereo_seeker_v1.launch  vio_fisheye_stereo_seeker_v2.launch  vio_pinhole_stereo_euroc.launch  vio_pinhole_stereo_fgi.launch  vio_pinhole_stereo_p100_front430.launch  vio_rectify_stereo_seeker_v1.launch  vio_rectify_stereo_seeker_v2.launch
docker/docker_diff_vio/image_transport/cmake/: image_transportConfig.cmake
docker/docker_diff_vio/locator_fdi/: package.xml
docker/docker_diff_vio/locator_fdi/cmake/: locator_fdiConfig.cmake
docker/docker_diff_vio/message_typedef/: package.xml
scripts/: README.md  link_trt.sh  link_trt.zsh  load_kailbr_results.sh  load_policy.sh  record.sh  record.zsh  record_calib.zsh  record_vio.sh  record_vio.zsh  run.sh  run.zsh  run_calib.zsh  stop.sh  stop.zsh
scripts/calib/: README.md  convert_kalibr_to_diffvio.py  gen_seeker_vio_frontend_config.zsh  gen_vio_backend_config.zsh  load_calib_results.zsh  save_calib_results.zsh
scripts/param/: convert_kailbra_to_diffvio.py
scripts/policy/: README.md  README_for_load_policy.md  export_pt_to_onnx.py  export_pt_to_trt.py  inspect_pt.py  load_policy.sh
scripts/yolo/: bags_to_images.py  export_trt_ultralytics.py
src/control/drone_controller/: CMakeLists.txt  package.xml
src/control/drone_controller/config/: ctrl_params.yaml
src/control/drone_controller/include/: ObservationQueue.hpp  drone_control_node.hpp
src/control/drone_controller/launch/: drone_controller.launch
src/control/drone_controller/rviz/: drone_controller.rviz
src/control/drone_controller/src/: ObservationQueue.cpp  TensorRTRunner.cpp  drone_control_node.cpp  inferance_benchmark.cpp
src/drone_control/: CMakeLists.txt  package.xml
src/drone_control/config/: drone_control.yaml
src/drone_control/include/: drone_control_node.hpp
src/drone_control/launch/: drone_control.launch
src/drone_control/src/: drone_control_node.cpp  inferance_benchmark.cpp
src/estimation/drone_observer/: CMakeLists.txt  setup.py
src/px4ctrl/: README.md
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_ctrl.launch
src/px4ctrl/src/: controller.cpp
src/state_estimation/drone_observer/: package.xml
(+85 files in other folders)
